--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
           </div>
           <section class="top-menu__search">
             <form method="get" class="form-search">
-              <label for="search" class="form-search__name">Поиск:</label>
+              <label for="search" class="form-search__name">
+                <span class="icon-search"></span>Поиск:
+              </label>
               <input type="search" name="search" id="search" class="form-search__input">
             </form>
           </section>
           <section class="top-menu__cart">
             <ul class="top-menu__cart-list">
               <li class="top-menu__cart-item">
-                <a href="#" class="top-menu__cart-item-link">Закладки:<span>0</span></a>
+                <a href="#" class="top-menu__cart-item-link">
+                  <span class="icon-bookmark"></span>Закладки: 0
+                </a>
               </li>
               <li class="top-menu__cart-item">
-                <a href="#" class="top-menu__cart-item-link  top-menu__cart-item-link--color">Корзина:<span>0</span></a>
+                <a href="#" class="top-menu__cart-item-link  top-menu__cart-item-link--color">
+                  <span class="icon-basket"></span>Корзина: 0
+                </a>
               </li>
               <li class="top-menu__cart-item">
                 <a href="#" class="top-menu__cart-item-link">Оформить заказ</a>
@@ -37,20 +43,23 @@
       <div class="wrapper">
         <section class="user-menu">
           <div class="user-menu__slogan">
-            <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+            <p class="user-menu__slogan-text">Интернет-магазин строительных материалов и инструментов для ремонта</p>
           </div>
           <section class="user-menu__contacts">
-            <p class="user-menu__contacts-tel">+7 (812) 555-05-55</p>
+            <p class="user-menu__contacts-tel"><span class="icon-phone"></span>+7 (812) 555-05-55</p>
             <p class="user-menu__contacts-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </p>
           </section>
           <section class="user-menu__login">
             <div class="user-menu__login-enter">
-              <a href="#" title="Войти">Войти</a>
-              <a href="#" title="Регистрация">Регистрация</a>
+              <a class="user-menu__login-enter-link" href="#" title="Войти"><span class="icon-login"></span>Войти</a>
+              <a class="user-menu__login-enter-link" href="#" title="Регистрация">Регистрация</a>
             </div>
+<!--
             <div class="user-menu__login-info  user-menu__login-info--hidden">
-              <a class="user-menu__login-name">Равшан Джамшутович</a>
+              <a class="user-menu__login-name" href="#" title="Равшан Джамшутович">
+                <span class="icon-user"></span>Равшан Джамшутович<span class="icon-logout"></span>
+              </a>
               <ul class="user-menu__login-info-list">
                 <li class="user-menu__login-info-item">
                   <a href="#">Мои заказы</a>
@@ -60,6 +69,7 @@
                 </li>
               </ul>
             </div>
+-->
           </section>
         </section>
         <nav class="menu-navigation">
@@ -94,7 +104,7 @@
         <section class="sub-menu">
           <section class="category">
             <ul class="category__list">
-              <li class="category__item  category__item--new">Материалы
+              <li class="category__item  item-new">Материалы
                 <a href="#" class="category__item-link">на любой вкус</a>
               </li>
               <li class="category__item">Инструмент
@@ -106,22 +116,32 @@
             </ul>
           </section>
           <section class="slider">
-            <span>Перфораторы</span>
-            <p>Настроящие мужские игрушки</p>
+            <input type="radio" id="btn-1" name="toggle" checked>
+            <input type="radio" id="btn-2" name="toggle">
             <div class="controls">
-              <div class="controls__prev"></div>
-              <div class="controls__next"></div>
+              <div class="controls__btn">
+                <label for="btn-1">
+                  <span class="icon-left-big"></span>
+                </label>
+              </div>
+              <div class="controls__btn">
+                <label for="btn-2">
+                  <span class="icon-right-big"></span>
+                </label>
+              </div>
             </div>
-            <a href="#" class="slider__link">Открыть каталог</a>
-          </section>
-          <section class="slider  slider--hidden">
-            <span>Дрели</span>
-            <p>Соседям на радость!</p>
-            <div class="controls">
-              <div class="controls__prev"></div>
-              <div class="controls__next"></div>
-            </div>
-            <a href="#" class="slider__link">Открыть каталог</a>
+            <section class="slider__inner">
+              <div class="slider__inner-content">
+                <span class="slider__title">Перфораторы</span>
+                <p class="slider__subtitle">Настроящие мужские игрушки</p>
+                <a href="#" class="slider__link">Открыть каталог</a>
+              </div>
+              <div class="slider__inner-content">
+                <span  class="slider__title">Дрели</span>
+                <p class="slider__subtitle">Соседям на радость!</p>
+                <a href="#" class="slider__link">Открыть каталог</a>
+              </div>
+            </section>
           </section>
           <section class="sale">
             <ul class="sale__list">
