main в пиксель + правка разметки

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <li class="sale__item">Скидки 50%
                 <a href="#" class="sale__item-link">На 350 товаров</a>
               </li>
-              <li class="sale__item">Скидки 50%
+              <li class="sale__item">Доставка
                 <a href="#" class="sale__item-link">Бесплатно</a>
               </li>
             </ul>
@@ -162,35 +162,43 @@
           <section class="popular-product__name">
             <ul class="popular-product__name-list">
               <li class="popular-product__name-item">
-                <div class="popular-product__item-img">
+                <div class="popular-product__item-foto">
                   <img src="img/bosh9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
                 </div>
-                <p class="popular-product__item-title">Перфоратор BOSCH BFG 9000</p>
-                <p class="popular-product__item-oldcost">32500 р.</p>
-                <a href="#" class="popular-product__item-price">25500 р.</a>
+                <div class="popular-product__item-description">
+                  <p class="popular-product__item-title">Перфоратор BOSCH BFG 9000</p>
+                  <p class="popular-product__item-oldcost">32500 р.</p>
+                  <a href="#" class="popular-product__item-price">25500 р.</a>
+                </div>
               </li>
               <li class="popular-product__name-item">
-                <div class="popular-product__item-img">
+                <div class="popular-product__item-foto">
                   <img src="img/bosh3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </div>
-                <p class="popular-product__item-title">Перфоратор BOSCH BFG 3000</p>
-                <p class="popular-product__item-oldcost">22500 р.</p>
-                <a href="" class="popular-product__item-price">15500 р.</a>
+                <div class="popular-product__item-description">
+                  <p class="popular-product__item-title">Перфоратор BOSCH BFG 3000</p>
+                  <p class="popular-product__item-oldcost">22500 р.</p>
+                  <a href="" class="popular-product__item-price">15500 р.</a>
+                </div>
               </li>
               <li class="popular-product__name-item">
-                <div class="popular-product__item-img">
+                <div class="popular-product__item-foto">
                   <img src="img/bosh6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </div>
-                <p class="popular-product__item-title">Перфоратор BOSCH BFG 6000</p>
-                <p class="popular-product__item-oldcost">30500 р.</p>
-                <a href="" class="popular-product__item-price">25500 р.</a>
+                <div class="popular-product__item-description">
+                  <p class="popular-product__item-title">Перфоратор BOSCH BFG 6000</p>
+                  <p class="popular-product__item-oldcost">30500 р.</p>
+                  <a href="#" class="popular-product__item-price">25500 р.</a>
+                </div>
               </li>
-              <li class="popular-product__name-item">
-                <div class="popular-product__item-img">
+              <li class="popular-product__name-item  popular-product--item-new">
+                <div class="popular-product__item-foto">
                   <img src="img/bosh2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </div>
-                <p class="popular-product__item-title">Перфоратор BOSCH BFG 2000</p>
-                <a href="" class="popular-product__item-price">12500 р.</a>
+                <div class="popular-product__item-description">
+                  <p class="popular-product__item-title">Перфоратор BOSCH BFG 2000</p>
+                  <a href="" class="popular-product__item-price">12500 р.</a>
+                </div>
               </li>
             </ul>
           </section>
@@ -198,53 +206,53 @@
             <p class="popular-product__title-text">Популярные производители:</p>
             <a href="#" class="popular-product__title-link">Все производители</a>
           </div>
-          <section class="popular-product__name">
-            <ul class="popular-product__name-list">
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">bosch</span>
-                <a href="" class="popular-product__name-item-link">
+          <section class="popular-mark__name">
+            <ul class="popular-mark__name-list">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">bosch</span>
+                <a href="" class="popular-mark__name-item-link">
                   <img src="img/logo-bosch.jpg" width="126" height="37" alt="bosch">
                 </a>
               </li>
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">Makita</span>
-                <a href="" class="popular-product__name-item-link">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Makita</span>
+                <a href="" class="popular-mark__name-item-link">
                   <img src="img/Makita.jpg" width="123" height="40" alt="Makita">
                 </a>
               </li>
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">DeWALT</span>
-                <a href="" class="popular-product__name-item-link">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">DeWALT</span>
+                <a href="" class="popular-mark__name-item-link">
                   <img src="img/DeWALT.jpg" width="146" height="44" alt="DeWALT">
                 </a>
               </li>
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">Интерскол</span>
-                <a href="" class="popular-product__name-item-link">
-                  <img src="img/%D0%98%D0%BD%D1%82%D0%B5%D1%80%D1%81%D0%BA%D0%BE%D0%BB.jpg" width="200" height="88" alt="Интерскол">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Интерскол</span>
+                <a href="" class="popular-mark__name-item-link">
+                  <img src="img/interscol.jpg" width="200" height="88" alt="Интерскол">
                 </a>
               </li>
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">Hitachi</span>
-                <a href="" class="popular-product__name-item-link">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Hitachi</span>
+                <a href="" class="popular-mark__name-item-link">
                   <img src="img/Hitachi.jpg" width="169" height="31" alt="Hitachi">
                 </a>
               </li>
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">LG</span>
-                <a href="" class="popular-product__name-item-link">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">LG</span>
+                <a href="" class="popular-mark__name-item-link">
                   <img src="img/LG.jpg" width="121" height="73" alt="LG">
                 </a>
               </li>
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">AEG</span>
-                <a href="" class="popular-product__name-item-link">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">AEG</span>
+                <a href="" class="popular-mark__name-item-link">
                   <img src="img/AEG.jpg" width="151" height="96" alt="AEG">
                 </a>
               </li>
-              <li class="popular-product__name-item">
-                <span class="popular-product__name-item-title  popular-product__name-item-title--hidden">Metabo</span>
-                <a href="" class="popular-product__name-item-link">
+              <li class="popular-mark__name-item">
+                <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Metabo</span>
+                <a href="" class="popular-mark__name-item-link">
                   <img src="img/Metabo.jpg" width="204" height="69" alt="Metabo">
                 </a>
               </li>
@@ -259,33 +267,44 @@
             <p class="service__description-subtitle">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
           <section class="service__submenu">
+            <input type="radio" id="delivery" name="menu" checked>
+            <input type="radio" id="guarant" name="menu">
+            <input type="radio" id="credit" name="menu">
             <ul class="service__submenu-list">
-              <li class="service__submenu-item">Доставка</li>
-              <li class="service__submenu-item">Гарантия</li>
-              <li class="service__submenu-item">Кредит</li>
+              <li class="service__submenu-item">
+                <label for="delivery">Доставка</label>
+              </li>
+              <li class="service__submenu-item">
+                <label for="guarant">Гарантия</label>
+              </li>
+              <li class="service__submenu-item">
+                <label for="credit">Кредит</label>
+              </li>
             </ul>
+            <div class="service__submenu-detals">
+              <section class="service__features  service__features--img-car">
+                <p class="service__features-title">Доставка</p>
+                <p class="service__features-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br> Ведь мы неплохо заработаем,<br> поднимая его на ваш на этаж!
+                </p>
+              </section>
+              <section class="service__features  service__features--img-medal">
+                <p class="service__features-title">Гарантия</p>
+                <p class="service__features-description  service__features-description--text">Если купленный у нас товар поломается или заискрит, <br>а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>Дом уж восстановите как-нибудь сами.
+                </p>
+              </section>
+              <section class="service__features  service__features--img-money">
+                <p class="service__features-title">Кредит</p>
+                <p class="service__features-description">Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
+                </p>
+              </section>
+            </div>
           </section>
-            <section class="service__features">
-              <p class="service__features-title">Доставка</p>
-              <p class="service__features-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш на этаж!
-              </p>
-            </section>
-            <section class="service__features  service__features--hidden">
-              <p class="service__features-title">Гарантия</p>
-              <p class="service__features-description">Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
-              </p>
-            </section>
-            <section class="service__features  service__features--hidden">
-              <p class="service__features-title">Кредит</p>
-              <p class="service__features-description">Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
-              </p>
-            </section>
         </div>
       </section>
       <div class="wrapper">
         <section class="info">
           <section class="about-us">
-            <p class="about-us__title">Компания "Техномарт"</p>
+            <p class="about-us__title">Компания &laquo;Техномарт&raquo;</p>
             <p class="about-us__description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
             </p>
             <p class="about-us__delivery">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
@@ -295,14 +314,14 @@
               <li class="about-us__delivery-item">Автотрейдинг</li>
               <li class="about-us__delivery-item">ЖелДорЭкспедиция</li>
             </ul>
-            <a href="" class="about-us__link">Подробнее о компании</a>
+            <a href="#" class="about-us__link">Подробнее о компании</a>
           </section>
           <section class="contacts">
             <p class="contacts__title">Контакты</p>
-            <p class="contacts__description">Вы можете забрать товар сами, заехав в наш офис:
+            <p class="contacts__description">Вы можете забрать товар сами,<br> заехав в наш офис:
             </p>
             <div class="contacts__map"></div>
-            <a href="" class="contacts__popup">Заблудились? Напишите нам!</a>
+            <a href="#" class="contacts__popup">Заблудились? Напишите нам!</a>
           </section>
         </section>
       </div>
