футер в пиксель + тень на табы

--- a/index.html
+++ b/index.html
@@ -329,46 +329,48 @@
     <footer>
       <div class="footer-top">
         <div class="wrapper">
-          <div class="logo">
-            <a class="logo__title">Техномарт</a>
+          <div class="footer-top__menu">
+            <div class="logo">
+              <a class="logo__title  logo__title--footer">Техномарт</a>
+            </div>
+            <nav class="footer-top__menu-nav">
+              <ul class="footer-top__menu-list">
+                <li class="footer-top__menu-item">
+                  <a href="#" class="footer-top__menu-item-link">Компания</a>
+                </li>
+                <li class="footer-top__menu-item">
+                  <a href="#" class="footer-top__menu-item-link">Новости</a>
+                </li>
+                <li class="footer-top__menu-item">
+                  <a href="catalog.html" class="footer-top__menu-item-link">Каталог</a>
+                </li>
+                <li class="footer-top__menu-item">
+                  <a href="#" class="footer-top__menu-item-link">Доставка</a>
+                </li>
+                <li class="footer-top__menu-item">
+                  <a href="#" class="footer-top__menu-item-link">Контакты</a>
+                </li>
+              </ul>
+            </nav>
           </div>
-          <nav class="footer-top__menu">
-            <ul class="footer-top__menu-list">
-              <li class="footer-top__menu-item">
-                <a href="#" class="footer-top__menu-item-link">Компания</a>
-              </li>
-              <li class="footer-top__menu-item">
-                <a href="#" class="footer-top__menu-item-link">Новости</a>
-              </li>
-              <li class="footer-top__menu-item">
-                <a href="catalog.html" class="footer-top__menu-item-link">Каталог</a>
-              </li>
-              <li class="footer-top__menu-item">
-                <a href="#" class="footer-top__menu-item-link">Доставка</a>
-              </li>
-              <li class="footer-top__menu-item">
-                <a href="#" class="footer-top__menu-item-link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
-          <p class="footer-top__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55
-          </p>
-          <section class="footer-top__submenu">
-            <ul class="footer-top__submenu-list">
-              <li class="footer-top__submenu-item">
-                <a href="#" class="footer-top__submenu-item-link">Материалы</a>
-              </li>
-              <li class="footer-top__submenu-item">
-                <a href="#" class="footer-top__submenu-item-link">Техника</a>
-              </li>
-              <li class="footer-top__submenu-item">
-                <a href="#" class="footer-top__submenu-item-link">Инструмент</a>
-              </li>
-              <li class="footer-top__submenu-item">
-                <a href="#" class="footer-top__submenu-item-link">Спецпредложения</a>
-              </li>
-            </ul>
-          </section>
+          <div class="footer-top__submenu">
+            <p class="footer-top__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55
+            </p>
+              <ul class="footer-top__submenu-list">
+                <li class="footer-top__submenu-item">
+                  <a href="#" class="footer-top__submenu-item-link">Материалы</a>
+                </li>
+                <li class="footer-top__submenu-item">
+                  <a href="#" class="footer-top__submenu-item-link">Техника</a>
+                </li>
+                <li class="footer-top__submenu-item">
+                  <a href="#" class="footer-top__submenu-item-link">Инструмент</a>
+                </li>
+                <li class="footer-top__submenu-item">
+                  <a href="#" class="footer-top__submenu-item-link">Спецпредложения</a>
+                </li>
+              </ul>
+          </div>
         </div>
       </div>
       <div class="footer-bottom">
@@ -378,9 +380,9 @@
             </p>
           </section>
           <section class="footer-bottom__social">
-            <a href="vk.com" class="footer-bottom__social-link">Вконтакте</a>
-            <a href="facebook.com" class="footer-bottom__social-link">Фейсбук</a>
-            <a href="instagramm.com" class="footer-bottom__social-link">Инстаграмм</a>
+            <a href="vk.com" class="footer-bottom__social-link  footer-bottom__social-link--hidden"><span class="icon-vk"></span>Вконтакте</a>
+            <a href="facebook.com" class="footer-bottom__social-link"><span class="icon-facebook"></span>Фейсбук</a>
+            <a href="instagramm.com" class="footer-bottom__social-link"><span class="icon-twitter"></span>Инстаграм</a>
           </section>
           <div class="footer-bottom__feedback">
             <p class="footer-bottom__feedback-text">Обратная связь:</p>
